--- a/TextWarp/Views/Shared/_GalleryLayout.cshtml
+++ b/TextWarp/Views/Shared/_GalleryLayout.cshtml
@@ -18,5 +18,6 @@
 <script src="~/js/jQuery.tagify.min.js"></script>
 <script src="~/lib/fontawesome/js/all.min.js"></script>
 <script src="~/lib/bootstrap5/js/bootstrap.min.js"></script>
+@await RenderSectionAsync("Scripts", required: false)
 <script src="~/js/GalleryScript.js"></script>
 </html>
