--- a/TextWarp/Views/Gallery/Index.cshtml
+++ b/TextWarp/Views/Gallery/Index.cshtml
@@ -22,15 +22,30 @@
                     <input type="text" class="search_input flex-grow-1" value="" placeholder="Search">
                 </div>
                 <div class="align-items-center col-md-3 col-sm-6 d-flex" style="padding-left: 3rem;color: #dad8dd;font-size: 14px;">
-                    <div id="" style="padding: 0 0.5rem;">
+                    <div id="btn_select" class="btn_chooseTemplate" style="padding: 0 0.5rem;cursor:pointer;">
                         Select
                     </div>
-                    <div id="" style="padding: 0 0.5rem;">
+                    <a href="/gallery/newwarp" class="btn_chooseTemplate" style="padding: 0 0.5rem;cursor:pointer; text-decoration:none;">
                         New
+                    </a>
+                </div>
+            </div>
+            <div class="d-flex" style="height: 2rem;">
+                <div class="col-md-9 col-sm-6 d-flex align-items-center">
+                </div>
+                <div id="select_sub_menu" class="align-items-center col-md-3 col-sm-6" style="display:none;padding-left: 3rem;color: #dad8dd;font-size: 14px;">
+                    <div id="act_duplicate" style="padding: 0 0.5rem;color:#a1a1a2;cursor:pointer;">
+                        Duplicate
+                    </div>
+                    <div id="act_delete" style="padding: 0 0.5rem;color:#a1a1a2;cursor:pointer;">
+                        Delete
+                    </div>
+                    <div id="act_share" style="padding: 0 0.5rem;color:#a1a1a2;cursor:pointer;">
+                        Share
                     </div>
                 </div>
             </div>
-            <div class="gallery-content d-flex overflow-auto flex-wrap" style="padding: 4rem 0;">
+            <div class="gallery-content d-flex overflow-auto flex-wrap" style="padding: 2rem 0;">
                 <a href="/gallery/newwarp" class="gallery-item d-flex flex-column align-items-center" style="text-decoration:none;">
                     <div class="gallery-item-img d-flex align-items-center justify-content-center">
                         <img src="~/icons/plus_item.png" style="max-width: 100%;max-height: 100%;">
@@ -38,68 +53,145 @@
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
                 </a>
                 <div class="gallery-item d-flex flex-column align-items-center">
-                    <div class="gallery-item-img d-flex align-items-center justify-content-center">
+                    <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
+                        <div class="gallery-item-overlay active"></div>
+                        <div class="check_container active">
+                            <div class="check-icon-container">
+                                <div class="check-icon"></div>
+                                <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                            </div>
+                        </div>
                         <img src="~/icons/heart.svg" style="max-width: 100%;max-height: 100%;">
                     </div>
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
                     <div style="color:#dad8dd;font-size: 14px;">2023-04-12 04:55</div>
                 </div>
                 <div class="gallery-item d-flex flex-column align-items-center">
-                    <div class="gallery-item-img d-flex align-items-center justify-content-center">
+                    <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
+                        <div class="gallery-item-overlay active"></div>
+                        <div class="check_container active">
+                            <div class="check-icon-container">
+                                <div class="check-icon"></div>
+                                <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                            </div>
+                        </div>
                         <img src="~/icons/heart.svg" style="max-width: 100%;max-height: 100%;">
                     </div>
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
                 </div>
                 <div class="gallery-item d-flex flex-column align-items-center">
-                    <div class="gallery-item-img d-flex align-items-center justify-content-center">
+                    <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
+                        <div class="gallery-item-overlay active"></div>
+                        <div class="check_container active">
+                            <div class="check-icon-container">
+                                <div class="check-icon"></div>
+                                <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                            </div>
+                        </div>
                         <img src="~/icons/heart.svg" style="max-width: 100%;max-height: 100%;">
                     </div>
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
                 </div>
                 <div class="gallery-item d-flex flex-column align-items-center">
-                    <div class="gallery-item-img d-flex align-items-center justify-content-center">
+                    <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
+                        <div class="gallery-item-overlay active"></div>
+                        <div class="check_container active">
+                            <div class="check-icon-container">
+                                <div class="check-icon"></div>
+                                <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                            </div>
+                        </div>
                         <img src="~/icons/heart.svg" style="max-width: 100%;max-height: 100%;">
                     </div>
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
                 </div>
                 <div class="gallery-item d-flex flex-column align-items-center">
-                    <div class="gallery-item-img d-flex align-items-center justify-content-center">
+                    <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
+                        <div class="gallery-item-overlay active"></div>
+                        <div class="check_container active">
+                            <div class="check-icon-container">
+                                <div class="check-icon"></div>
+                                <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                            </div>
+                        </div>
                         <img src="~/icons/heart.svg" style="max-width: 100%;max-height: 100%;">
                     </div>
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
                 </div>
                 <div class="gallery-item d-flex flex-column align-items-center">
-                    <div class="gallery-item-img d-flex align-items-center justify-content-center">
+                    <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
+                        <div class="gallery-item-overlay active"></div>
+                        <div class="check_container active">
+                            <div class="check-icon-container">
+                                <div class="check-icon"></div>
+                                <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                            </div>
+                        </div>
                         <img src="~/icons/heart.svg" style="max-width: 100%;max-height: 100%;">
                     </div>
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
                 </div>
                 <div class="gallery-item d-flex flex-column align-items-center">
-                    <div class="gallery-item-img d-flex align-items-center justify-content-center">
+                    <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
+                        <div class="gallery-item-overlay active"></div>
+                        <div class="check_container active">
+                            <div class="check-icon-container">
+                                <div class="check-icon"></div>
+                                <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                            </div>
+                        </div>
                         <img src="~/icons/heart.svg" style="max-width: 100%;max-height: 100%;">
                     </div>
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
                 </div>
                 <div class="gallery-item d-flex flex-column align-items-center">
-                    <div class="gallery-item-img d-flex align-items-center justify-content-center">
+                    <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
+                        <div class="gallery-item-overlay active"></div>
+                        <div class="check_container active">
+                            <div class="check-icon-container">
+                                <div class="check-icon"></div>
+                                <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                            </div>
+                        </div>
                         <img src="~/icons/heart.svg" style="max-width: 100%;max-height: 100%;">
                     </div>
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
                 </div>
                 <div class="gallery-item d-flex flex-column align-items-center">
-                    <div class="gallery-item-img d-flex align-items-center justify-content-center">
+                    <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
+                        <div class="gallery-item-overlay active"></div>
+                        <div class="check_container active">
+                            <div class="check-icon-container">
+                                <div class="check-icon"></div>
+                                <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                            </div>
+                        </div>
                         <img src="~/icons/heart.svg" style="max-width: 100%;max-height: 100%;">
                     </div>
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
                 </div>
                 <div class="gallery-item d-flex flex-column align-items-center">
-                    <div class="gallery-item-img d-flex align-items-center justify-content-center">
+                    <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
+                        <div class="gallery-item-overlay active"></div>
+                        <div class="check_container active">
+                            <div class="check-icon-container">
+                                <div class="check-icon"></div>
+                                <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                            </div>
+                        </div>
                         <img src="~/icons/heart.svg" style="max-width: 100%;max-height: 100%;">
                     </div>
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
                 </div>
                 <div class="gallery-item d-flex flex-column align-items-center">
-                    <div class="gallery-item-img d-flex align-items-center justify-content-center">
+                     <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
+                        <div class="gallery-item-overlay active"></div>
+                        <div class="check_container active">
+                            <div class="check-icon-container">
+                                <div class="check-icon"></div>
+                                <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                            </div>
+                        </div>
                         <img src="~/icons/heart.svg" style="max-width: 100%;max-height: 100%;">
                     </div>
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
