--- a/TextWarp/Views/Gallery/NewWarp.cshtml
+++ b/TextWarp/Views/Gallery/NewWarp.cshtml
@@ -20,7 +20,7 @@
         <div id="wordInputView" class="sub-view align-items-center d-flex justify-content-around w-100 h-100">
             <div class="align-items-center d-flex flex-column col-sm-12 col-md-9 col-lg-8 col-xl-6">
                 <div>
-                    <label style="font-size: 28px;color: #9a9a9a;">Enter up to 3 words here</label>
+                    <label style="font-size: 28px;color: #9a9a9a;">Enter up to 2 words here</label>
                 </div>
                 <div class="w-100" style="padding: 85px 10px">
                     <input id="warp_words" name="tags" placeholder="Type a word and hit enter" value="LOVE" style="width:100%">
@@ -59,3 +59,31 @@
 
     </div>
 </div>
+
+@section Scripts{
+    <script>
+        var inputElm = $('[name=tags]')[0]; //first word input box
+        var currentPathIndex = -1;
+        //initialize tagify input
+        tagify = new Tagify(inputElm, {
+            duplicates: false,
+            addTagOnBlur: true,
+            originalInputValueFormat: valuesArr => valuesArr.map(item => item.value).join(' ')
+        });
+        inputElm.addEventListener('change', onChange);
+        function onChange(e) {
+            // outputs a String
+            var values = e.target.value;
+            values = values.split(" ");
+            if (values.length == 2) {
+                // alert("You can enter only 3 words.");
+                $(".tagify__input")[0].classList.add("d-none");
+                contentWords = e.target.value;
+            }
+            else {
+                $(".tagify__input")[0].classList.remove("d-none");
+                $(".tagify__input")[0].classList.add("d-inline-block");
+            }
+        }
+    </script>
+}
