--- a/TextWarp/Views/Gallery/Index.cshtml
+++ b/TextWarp/Views/Gallery/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["title"] = "Gallery";
     Layout = "~/Views/Shared/_GalleryLayout.cshtml";
 }
-<div class="d-flex flex-column h-100" style="">
+<div class="d-flex flex-column h-100" id="gallery_view">
     <div class="align-items-center d-flex justify-content-between" style="background-color: #6f6d70; height: 48px">
         <div class="p-3">
             <a href="#" style="font-size: 28px; font-weight: bold; color: #ffffff; text-decoration:none;">TextWarp</a>
@@ -25,9 +25,9 @@
                     <div id="btn_select" class="btn_chooseTemplate" style="padding: 0 0.5rem;cursor:pointer;">
                         Select
                     </div>
-                    <a href="/gallery/newwarp" class="btn_chooseTemplate" style="padding: 0 0.5rem;cursor:pointer; text-decoration:none;">
+                    <div id="newWarpedText" class="btn_chooseTemplate" style="padding: 0 0.5rem;cursor:pointer; text-decoration:none;">
                         New
-                    </a>
+                    </div>
                 </div>
             </div>
             <div class="d-flex" style="height: 2rem;">
@@ -46,34 +46,95 @@
                 </div>
             </div>
             <div class="gallery-content d-flex overflow-auto flex-wrap" style="padding: 2rem 0;">
-                <div id="createNewWarp" href="/gallery/newwarp" class="gallery-item d-flex flex-column align-items-center" style="text-decoration:none;">
+                <div id="createNewWarp">
                     <div class="gallery-item-img d-flex align-items-center justify-content-center">
                         <img src="~/icons/plus_item.png" style="max-width: 100%;max-height: 100%;">
                     </div>
                     <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">Create Document</div>
                 </div>
-                @foreach(var saved_svg in Model){
-                    <div class="gallery-item d-flex flex-column align-items-center">
-                        <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
-                            <div class="gallery-item-overlay"></div>
-                            <div class="check_container">
-                                <div class="check-icon-container">
-                                    <div class="check-icon"></div>
-                                    <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                @if( Model != null){
+                    @foreach (var saved_svg in Model)
+                    {
+                        <div class="gallery-item">
+                            <input type="hidden" data-id="@saved_svg.Id" />
+                            <div class="gallery-item-img d-flex align-items-center justify-content-center" style="position:relative;">
+                                <div class="gallery-item-overlay"></div>
+                                <div class="check_container">
+                                    <div class="check-icon-container">
+                                        <div class="check-icon"></div>
+                                        <i class="fa-solid fa-check" style="color: #fff;font-weight:900;z-index: 101;"></i>
+                                    </div>
                                 </div>
+                                @if (!String.IsNullOrEmpty(saved_svg.SvgfileName))
+                                {
+                                    <img src="~/uploads/@saved_svg.SvgfileName" style="max-width: 100%;max-height: 100%;">
+                                }
+                                else
+                                {
+                                    <img style="max-width: 100%;max-height: 100%;" src="~/icons/heart.svg" />
+                                }
                             </div>
-                            @if (!String.IsNullOrEmpty(saved_svg.SvgFileName))
-                            {
-                                <img src="uploads/@saved_svg.SvgFileName" class="fullscreen-box-preview-img">
-                            }
-                            else {
-                                <img style="max-width: 100%;max-height: 100%;" src="~/icons/heart.svg" />
-                            }
+                            <div class="d-flex flex-column align-items-center justify-content-center">
+                                <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">@saved_svg.WorkName</div>
+                                <div style="color:#dad8dd;font-size: 14px;">@saved_svg.CreatedAt</div>
+                            </div>
                         </div>
-                        <div style="color:#dad8dd;font-size: 14px;margin-top: 8px;">@saved_svg.SvgFileName</div>
-                        <div style="color:#dad8dd;font-size: 14px;">@saved_svg.CreatedAt</div>
-                    </div>
+                    }
                 }
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="d-none flex-column h-100" id="newWarp_view">
+    <div class="align-items-center d-flex justify-content-between" style="background-color: #6f6d70; height: 48px">
+        <div class="p-3">
+            <a href="/gallery/" style="font-size: 28px; font-weight: bold; color: #ffffff;text-decoration:none;">TextWarp</a>
+        </div>
+        <div class="p-3">
+            <a href="/gallery/" style="background: transparent; border: none; color: #ffffff; margin-left: 0.5rem; margin-right: 0.5rem; text-decoration:none;">Gallery</a>
+            <a style="background: transparent; border: none; color: #ffffff; margin-left: 0.5rem; margin-right: 0.5rem;text-decoration:none;">Sign in</a>
+        </div>
+    </div>
+    <div id="main" class="d-flex w-100" style="height: calc(100vh - 48px);overflow:hidden;">
+        @*word input view*@
+        <div id="wordInputView" class="sub-view align-items-center d-flex justify-content-around w-100 h-100">
+            <div class="align-items-center d-flex flex-column col-sm-12 col-md-9 col-lg-8 col-xl-6">
+                <div>
+                    <label style="font-size: 28px;color: #9a9a9a;">Enter up to 2 words here</label>
+                </div>
+                <div class="w-100" style="padding: 85px 10px">
+                    <input id="warp_words" name="tags" placeholder="Type a word and hit enter" value="LOVE" style="width:100%">
+                    <input name="inputedWords" type="hidden" value="LOVE" />
+                </div>
+                <div>
+                    <button id="wordsInput" class="btn-next">Next</button>
+                </div>
+            </div>
+        </div>
+        @*style choose view*@
+        <div id="styleChooseView" class="sub-view d-none align-items-center d-flex justify-content-around w-100 h-100">
+            <div class="align-items-center d-flex flex-column col-sm-12 col-md-9 col-lg-8 col-xl-8">
+                <div>
+                    <label style="font-size: 28px;color: #9a9a9a;">Select your prefered shape</label>
+                </div>
+                <div class="w-100 d-flex justify-content-between align-items-center" style="height: 300px;">
+                    <div class="style-tab h-100 d-flex align-items-center justify-content-center" data-pathIndex="0" style="position:relative; width:27%;">
+                        <img src="~/icons/circle.svg" style="max-width:85%;position:absolute;" />
+                        <img src="~/icons/circle_shadow.svg" style="display:none;max-width:100%;position:absolute;visibility: visible;opacity: 0.4;" />
+                    </div>
+                    <div class="style-tab h-100 d-flex align-items-center justify-content-center" data-pathIndex="1" style="position:relative; width:35%;">
+                        <img src="~/icons/ellipse.svg" style="max-width:85%;position:absolute;" />
+                        <img src="~/icons/ellipse-shadow.svg" style="display:none;max-width:100%;position:absolute;visibility: visible;opacity: 0.4;" />
+                    </div>
+                    <div class="style-tab h-100 d-flex align-items-center justify-content-center" data-pathIndex="2" style="position:relative; width:27%;">
+                        <img src="~/icons/heart.svg" style="max-width:85%;position:absolute;" />
+                        <img src="~/icons/heart_shadow.svg" style="display:none;max-width:100%;position:absolute;visibility: visible;opacity: 0.4;" />
+                    </div>
+                </div>
+                <div>
+                    <div id="chooseStyle" class="align-items-center btn-next d-flex justify-content-center" style="text-decoration:none;">Next</div>
+                </div>
             </div>
         </div>
     </div>
