--- a/TextWarp/Views/Shared/_EditorLayout.cshtml
+++ b/TextWarp/Views/Shared/_EditorLayout.cshtml
@@ -10,14 +10,14 @@
     <title>@ViewData["title"]</title>
     @await RenderSectionAsync("Styles", required: false)
 </head>
-<body style="height:100vh; position:relative;overflow:hidden;">
-    <div class="d-flex flex-column h-100" style="">
+<body style="height:100vh;  width: 100vw;position:relative;overflow:hidden;">
+    <div class="d-flex flex-column" style="position:absolute; left:0; right:0;height: 100vh; width: 100vw">
         <div class="align-items-center d-flex justify-content-between" style="background-color: #6f6d70; height: 48px;z-index:101;">
             <div class="p-3">
-                <a href="/gallery/#" style="font-size: 28px; font-weight: bold; color: #ffffff; text-decoration:none;">TextWarp</a>
+                <a href="/gallery/" style="font-size: 28px; font-weight: bold; color: #ffffff; text-decoration:none;">TextWarp</a>
             </div>
             <div class="p-3">
-                <a href="/gallery/#" style="background: transparent; border: none; color: #ffffff; margin-left: 0.5rem; margin-right: 0.5rem; text-decoration:none;">Gallery</a>
+                <a href="/gallery/" style="background: transparent; border: none; color: #ffffff; margin-left: 0.5rem; margin-right: 0.5rem; text-decoration:none;">Gallery</a>
                 <a style="background: transparent; border: none; color: #ffffff; margin-left: 0.5rem; margin-right: 0.5rem; text-decoration:none;">Sign in</a>
             </div>
         </div>
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div id="svg_temp" style="position:absolute; left:100vw;top:100vh;"></div>
-    <svg id="svg_container" xmlns="http://www.w3.org/2000/svg" style="position:absolute;left:100vw;top:100vh;">
+    <svg id="svg_container" xmlns="http://www.w3.org/2000/svg" style="position:absolute;left:100vw;top:100vh;display:none;">
         <defs>
             <linearGradient id="sampleGradient" gradientTransform="rotate(1)" x1="0%" y1="50%" x2="100%" y2="50%" gradientUnits="userSpaceOnUse">
                 <stop offset="0%" id="first_color" stop-color="#6b6fff" />
@@ -34,20 +34,18 @@
             </linearGradient>
         </defs>
     </svg>
-    <div id="bodyOverlay"></div>
+    
 </body>
 
 <script src="~/js/warp_asset/d3.v3.min.js"></script>
 <script src="~/js/warp_asset/svg-path-properties.min.js"></script>
 <script src="~/js/warp_asset/seperatePathGenerator.js"></script>
-
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/fontawesome/js/all.min.js"></script>
 <script src="~/lib/bootstrap5/js/bootstrap.min.js"></script>
 <script src="~/js/jquery.wheelcolorpicker.js"></script>
 <script src="~/js/toolcool-range-slider.min.js"></script>
-<script src="~/js/ColorPickerScript.js"></script>
 <script src="~/js/warp_asset/app.js"></script>
 <script src="~/lib/fabric.min.js"></script>
-<script src="~/js/EditorScript.js"></script>
+@await RenderSectionAsync("Scripts", required: false)
 </html>
