--- a/TextWarp/wwwroot/css/stylesheet.css
+++ b/TextWarp/wwwroot/css/stylesheet.css
@@ -636,7 +636,7 @@ a:link, a:visited, a:hover {
 }
 .edit-svg {
     max-width: 100%;
-    padding: 3rem;
+    margin: 3rem;
     z-index:101;
 }
 .currentActivePath {
@@ -709,4 +709,22 @@ a:link, a:visited, a:hover {
     justify-content: center;
     align-items: center;
     position:relative;
+}
+#createNewWarp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    height: 200px;
+    text-decoration: none;
+}
+.btn_redo {
+    border: none;
+    width: 16px;
+    height: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+    padding: 0;
 }
