can create one or two words warp text.

--- a/TextWarp/Views/WarpEditor/Editor.cshtml
+++ b/TextWarp/Views/WarpEditor/Editor.cshtml
@@ -174,7 +174,7 @@
                     <div class="default-text" style="font-size: 22px;margin-bottom: 15px;">
                         Actions
                     </div>
-                    <div style="overflow-y: auto;" class="d-flex flex-column flex-grow-1 justify-content-around">
+                    <div style="overflow-y: auto;" class="d-flex flex-column flex-grow-1 justify-content-around action-container">
                         <div class="d-flex my-2">
                             <div></div>
                             <div class="default-text" style="font-size:14px;padding-left: 38px;cursor:pointer;">Send to TrueBrush</div>
