--- a/TextWarp/wwwroot/css/stylesheet.css
+++ b/TextWarp/wwwroot/css/stylesheet.css
@@ -735,9 +735,12 @@ a:link, a:visited, a:hover {
     align-items:center;
     justify-content:center;
 }
-.slick-list.draggable{
-    height:100% !important;
-    width:100% !important;
+.slick-list{
+    height: 100% !important;
+}
+.slick-list.draggable {
+    height: 100% !important;
+    width: 100% !important;
 }
 .slick-slide{
     opacity: 0.4;
@@ -857,4 +860,18 @@ a:link, a:visited, a:hover {
     to {
         transform: rotate(1turn);
     }
+}
+
+.action-container::-webkit-scrollbar {
+    width: 8px;
+}
+
+.action-container::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 4px grey;
+    border-radius: 4px;
+}
+
+.action-container::-webkit-scrollbar-thumb {
+    background: #585858;
+    border-radius: 5px;
 }
