fixed undo/redo disable or active issues

--- a/TextWarp/wwwroot/css/stylesheet.css
+++ b/TextWarp/wwwroot/css/stylesheet.css
@@ -727,6 +727,11 @@ a:link, a:visited, a:hover {
     justify-content: center;
     background: transparent;
     padding: 0;
+    opacity:0.4;
+}
+.btn_redo.active{
+    cursor:pointer;
+    opacity: 1;
 }
 .vcarousel-item{
     width:500px;
