--- a/TextWarp/Views/Shared/_GalleryLayout.cshtml
+++ b/TextWarp/Views/Shared/_GalleryLayout.cshtml
@@ -7,6 +7,7 @@
     <link href="~/lib/bootstrap5/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/stylesheet.css" rel="stylesheet">
     <link href="~/lib/fontawesome/css/all.min.css" rel="stylesheet">
+    <link href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" rel="stylesheet">
     <link href="~/css/tagify.css" rel="stylesheet">
     <title>@ViewData["title"]</title>
     @await RenderSectionAsync("Styles", required: false)
@@ -26,6 +27,7 @@
 </body>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/js/jQuery.tagify.min.js"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
 <script src="~/lib/fontawesome/js/all.min.js"></script>
 <script src="~/lib/bootstrap5/js/bootstrap.min.js"></script>
