--- a/TextWarp/Views/Warp/Editor.cshtml
+++ b/TextWarp/Views/Warp/Editor.cshtml
@@ -9,6 +9,7 @@
 <input type="hidden" id="svg_filePath" data-filePath="@Model.svgFilePath" />
 <input type="hidden" id="words" data-words="@Model.words"/>
 <input type="hidden" id="styleIndex" data-styleIndex="@Model.styleIndex"/>
+<input type="hidden" id="version" data-version = "@Model.version"/>
 <button id="btn_warpEndHandler" style="display:none"></button>
 <div id="bodyOverlay"></div>
 <div id="svgEditorView" class="sub-view d-flex align-items-center w-100 h-100">
